--- a/templates/staffDicOutput.html
+++ b/templates/staffDicOutput.html
@@ -136,9 +136,9 @@
 
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
 
-                <h2>Apply Leave</h2>
+                <h2>Staff Details</h2>
                 
-                <form action ='/applyEmpLeave' method = 'POST'>
+                <form action ='/staffDicOutput' method = 'POST'>
                     {% for item in data %}
                     <label>Leave ID: </label>
                     <input type = "text" name="leaveID"></br></br>
