--- a/templates/staffDicOutput.html
+++ b/templates/staffDicOutput.html
@@ -126,7 +126,7 @@
                         <li class="nav-item">
                             <a class="nav-link active" href="{{ url_for('staffDic')}}">
                                 <span class="align-text-bottom"></span>
-                                Apply Leave
+                                Staff Directory
                             </a>
                         </li>
                     </ul>
