--- a/templates/staffDic.html
+++ b/templates/staffDic.html
@@ -106,7 +106,7 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="{{ url_for('staffDic')}}">
                                 <span class="align-text-bottom"></span>
-                                Apply Leave
+                                Staff Directory
                             </a>
                         </li>
                     </ul>
@@ -127,7 +127,7 @@
                                     <h><b>Search Staff</b></h>
                                 </div>
                                 <div class="card-body" style="background-color: #e9ecef;">
-                                    <form action="/applyLeave" autocomplete="on" method="POST" enctype="multipart/form-data"
+                                    <form action="/staffDicOutput" autocomplete="on" method="POST" enctype="multipart/form-data"
                                         role="form">
                                         <label>Employee ID: </label>
                                         <input type = "text" name = "searchData">
