--- a/templates/index.html
+++ b/templates/index.html
@@ -115,7 +115,7 @@
             </nav>
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
                 <h2 style="padding-top :75px;text-align:center;">Welcome to TARUC Employee System</h2>
-                <<img src="{{ url_for('/static/homeImage.jpg')}}" width ="100%" height="75%">
+                <img src="{{ url_for('/static/homeImage.jpg')}}" width ="100%" height="75%">
 
             </main>
             <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
