--- a/templates/addEmp.html
+++ b/templates/addEmp.html
@@ -203,8 +203,8 @@
                                                         <div style="text-align: center;">
                                                             <img id="img-upload">
                                                             <div id="tem_img">
-                                                                <!--<img src="{{url_for('static',filename = 'avatar.png') }}"
-                                                                    alt="" width="150px" height="100px">-->
+                                                                <img src="../static/avatar.png"
+                                                                    alt="" width="150px" height="100px">
                                                             </div>
                                                             <br><br>
                                                             <div class="input-group">
