--- a/templates/staffDic.html
+++ b/templates/staffDic.html
@@ -130,7 +130,7 @@
                                     <form action="/staffDicOutput" autocomplete="on" method="POST" enctype="multipart/form-data"
                                         role="form">
                                         <label>Employee ID: </label>
-                                        <input type = "text" name = "searchData">
+                                        <input type = "text" name = "emp_id">
 
                                             <!--btn-->
                                             <div class="col-md-12" style="text-align:center;">
