--- a/templates/staffDicOutput.html
+++ b/templates/staffDicOutput.html
@@ -141,17 +141,19 @@
                 <form action ='/staffDicOutput' method = 'POST'>
                     {% for item in data %}
                     <label>Employee ID:</label>
-                    <input type="text" name="emp_id" value="{{item[0]}}" readonly>
+                    <input type="text" name="emp_id" value="{{id}}" readonly>
                     <label>Employee Name: </label>
-                    <input type = "text" name="emp_name" value="{{item[1]}}" readonly></br></br>
+                    <input type = "text" name="emp_name" value="{{name}}" readonly></br></br>
                     <label>DOB:</label>
-                    <input type = "date" name="dob" value="{{item[2]}}" readonly></br></br>
+                    <input type = "date" name="dob" value="{{date_of_birth}}" readonly></br></br>
                     <label>Department</label>
-                    <input type = "text" name="emp_dept" value="{{item[3]}}" readonly></br></br>
+                    <input type = "text" name="emp_dept" value="{{department}}" readonly></br></br>
                     <label>Gender</label>
-                    <input type="text" name="Gender" value="{{item[4]}}" readonly></br></br>
+                    <input type="text" name="Gender" value="{{location}}" readonly></br></br>
                     <label>Address :</label>
-                    <input type="text" name="address" value="{{item[5]}}" readonly></br></br>
+                    <input type="text" name="address" value="{{emp_gender}}" readonly></br></br>
+                    <img src="{{ image_url }}">
+
                     
                     {% endfor %}
                 </form>
